--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     ]
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.61",
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta2",
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta2",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta2",
